force-app/main/default/objects/Demo_Invoice__c/Demo_Invoice__c.object-meta.xml
<CustomObject>
    <description>Demo invoice mirror of standard Invoice. Used because standard Invoice has all fields createable=false and direct DML is blocked.</description>
    <label>Demo Invoice</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>