force-app/main/default/objects/Demo_Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demo Invoices</relationshipLabel>
    <relationshipName>Demo_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>