force-app/main/default/objects/Demo_Invoice__c/fields/Billing_Schedule_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Id__c</fullName>
    <description>The BillingSchedule Id this invoice was generated from.</description>
    <externalId>true</externalId>
    <label>Billing Schedule Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>