force-app/main/default/objects/Demo_Invoice__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description>Customer email used for Stripe payment link delivery. Populated from the related Order/Account at invoice creation, or manually edited.</description>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>