force-app/main/default/objects/Demo_Invoice__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Demo Invoices</relationshipLabel>
    <relationshipName>Demo_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>