force-app/main/default/objects/Demo_Invoice__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <description>Timestamp populated by MuleSoft when Stripe webhook confirms payment_intent.succeeded.</description>
    <label>Paid Date</label>
    <type>DateTime</type>
</CustomField>