force-app/main/default/objects/Demo_Invoice__c/fields/Stripe_Payment_Intent_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Intent_Id__c</fullName>
    <description>Stripe Payment Intent ID. Used for idempotency and to correlate webhook callbacks back to the originating invoice.</description>
    <externalId>true</externalId>
    <label>Stripe Payment Intent Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>