force-app/main/default/objects/Demo_Invoice__c/fields/Stripe_Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_URL__c</fullName>
    <description>Stripe Payment Link URL populated by MuleSoft after invoice is sent. Customer clicks this URL to pay.</description>
    <label>Stripe Payment URL</label>
    <type>Url</type>
</CustomField>